# changelist

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.md  RELEASE.md  pyproject.toml
.github/workflows/: lint.yml  test.yml
.tools/: readme.py
src/changelist/: __main__.py  _cli.py  _config.py  _format.py  _objects.py  _query.py  default_config.toml
test/: desired_notes.md  desired_notes.rst  test_format.py  test_objects.py
