[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "changelist"
version = "0.2"
requires-python = ">=3.9"
readme = "README.md"
license = {file = "LICENSE.txt"}
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    "requests",
    "requests-cache",
    "tqdm",
    "PyGithub"
]

[project.urls]
"Source" = "https://github.com/scientific-python/changelist"

[project.scripts]
changelist = "changelist.__main__:main"

[project.optional-dependencies]
lint = ["pre-commit == 3.4.0"]

[tool.ruff]
line-length = 88
target-version = "py39"
select = [
    "C",
    "E",
    "F",
    "W",
    "B",
    "I",
    "UP",
]
