[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "changelist"
version = "0.5"
# TODO add slots=True, kw_only=True to dataclasses starting with >=3.10
requires-python = ">=3.9"
readme = "README.md"
license = {file = "LICENSE.txt"}
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    "requests",
    "requests-cache",
    "tqdm",
    "PyGithub"
]

[project.urls]
"Source" = "https://github.com/scientific-python/changelist"

[project.scripts]
changelist = "changelist.__main__:main"

[project.optional-dependencies]
lint = ["pre-commit == 3.6.0"]
test = ["pytest", "pytest-cov"]

[tool.ruff]
line-length = 88
target-version = "py39"
select = [
    "C",
    "E",
    "F",
    "W",
    "B",
    "I",
    "UP",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--doctest-modules"
testpaths = ["src", "test"]
